--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.3.8",
     "@nestjs/websockets": "^10.3.8",
+    "@prisma/adapter-pg": "^5.13.0",
     "@prisma/client": "^5.13.0",
     "@types/axios": "^0.14.0",
     "@types/cookie-parser": "^1.4.7",
