--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@nestjs/microservices": "^10.3.8",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.3.8",
+    "@nestjs/swagger": "^7.3.1",
+    "@nestjs/throttler": "^5.1.2",
     "@nestjs/websockets": "^10.3.8",
     "@prisma/adapter-pg": "^5.13.0",
     "@prisma/client": "^5.13.0",
@@ -45,6 +47,7 @@
     "@types/pg": "^8.11.5",
     "@types/reflect-metadata": "^0.1.0",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "joi": "^17.13.0",
