--- a/amplify.yml
+++ b/amplify.yml
@@ -1,7 +1,8 @@
 version: 1
 env:
   variables:
-    key: value
+    ACCESS_KEY: process.env.AMPLIFY_ACCESS_KEY
+    SECRET_ACCESS_KEY: process.env.AMPLIFY_SECRET_ACCESS_KEY
 backend:
   phases:
     preBuild:
