--- a/amplify.yml
+++ b/amplify.yml
@@ -1,19 +1,9 @@
 version: 1
 env:
   variables:
-    ACCESS_KEY: process.env.AMPLIFY_ACCESS_KEY
-    SECRET_ACCESS_KEY: process.env.AMPLIFY_SECRET_ACCESS_KEY
+    AWS_ACCESS_KEY_ID: process.env.AMPLIFY_ACCESS_KEY
+    AWS_SECRET_ACCESS_KEY: process.env.AMPLIFY_SECRET_ACCESS_KEY
 backend:
-#  phases:
-#    preBuild:
-#      commands:
-#        - yarn install
-#    build:
-#      commands:
-#        - amplifyPush --simple
-#    artifacts:
-#      baseDirectory: public
-#      files:#backend:
   phases:
     preBuild:
       commands:
@@ -24,7 +14,6 @@ backend:
     artifacts:
       baseDirectory: public
       files:
-        - '**/*'
         - '**/*'
 frontend:
   phases:
