--- a/amplify.yml
+++ b/amplify.yml
@@ -10,7 +10,7 @@ backend:
         - yarn install
     build:
       commands:
-        - amplifyPush --simple
+        - yarn build
     artifacts:
       baseDirectory: public
       files:
@@ -30,20 +30,59 @@ frontend:
   cache:
     paths:
       - node_modules/**/*
-#test:
-#  phases:
-#    preTest:
-#      commands:
-#        - *enter command*
+
+#
+#version: 1
+#applications:
+#  - appRoot: apps/react-app
+#    env:
+#      variables:
+#        key: value
+#    backend:
+#      phases:
+#        preBuild:
+#          commands:
+#            - *enter command*
+#        build:
+#          commands:
+#            - *enter command*
+#        postBuild:
+#          commands:
+#            - *enter command*
+#    frontend:
+#      buildPath: / # Run install and build from the monorepo project root
+#      phases:
+#        preBuild:
+#          commands:
+#            - *enter command*
+#            - *enter command*
+#        build:
+#          commands:
+#            - *enter command*
+#      artifacts:
+#        files:
+#          - location
+#          - location
+#        discard-paths: yes
+#        baseDirectory: location
+#      cache:
+#        paths:
+#          - path
+#          - path
 #    test:
-#      commands:
-#        - *enter command*
-#    postTest:
-#      commands:
-#        - *enter command*
-#  artifacts:
-#    files:
-#      - location
-#      - location
-#    configFilePath: *location*
-#    baseDirectory: *location*
+#      phases:
+#        preTest:
+#          commands:
+#            - *enter command*
+#        test:
+#          commands:
+#            - *enter command*
+#        postTest:
+#          commands:
+#            - *enter command*
+#      artifacts:
+#        files:
+#          - location
+#          - location
+#        configFilePath: *location*
+#        baseDirectory: *location*
