--- a/deployment.yaml
+++ b/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app:  lens-lounge
 spec:
-  replicas: 3
+#  replicas: 3
   selector:
     matchLabels:
       app:  lens-lounge
