--- a/deployment.yaml
+++ b/deployment.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: lens-lounge-deploy
 spec:
+  replicas: 3
   selector:
     matchLabels:
       app: lens-lounge-deploy
@@ -12,13 +13,13 @@ spec:
         app: lens-lounge-deploy
     spec:
       containers:
-        - name: lens-lounge-deploy
+        - name: lens-lounge-deploy  # <--- This is the name of the container
           image: sergehall/lens-lounge
           resources:
             limits:
-              memory: "256Mi"
-              cpu: "250m"
+              memory: "256Mi" # <--- This is the maximum amount of memory that the container can use
+              cpu: "250m"  # <--- This is the maximum amount of CPU that the container can use
           ports:
-            - containerPort: 3000
-              protocol: TCP
+            - containerPort: 5000 # <--- This is the port that the container is listening on
+              protocol: TCP # <--- This is the protocol that the container is listening on
       restartPolicy: Always
