--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/joi": "^17.2.3",
     "@types/pg": "^8.11.5",
     "@types/reflect-metadata": "^0.1.0",
+    "axios": "^1.6.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
