--- a/apps/payment/package.json
+++ b/apps/payment/package.json
@@ -1,6 +1,6 @@
 {
   "name": "payment",
-  "version": "0.0.1",
+  "version": "2.0.0",
   "description": "NestJS app by PostgreSQL (Prisma). My first steps work with NodeJS, Express, NestJS, Microservices, RabbitMQ, WebSocket, Docker + kubernetes + jenkins, SOLID, Hexagonal architecture, SAGA,front-end basics.",
   "author": "Serge Hall",
   "private": true,
@@ -45,6 +45,7 @@
     "@types/joi": "^17.2.3",
     "@types/pg": "^8.11.5",
     "@types/reflect-metadata": "^0.1.0",
+    "axios": "^1.6.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
@@ -97,5 +98,6 @@
     "roots": [
       "<rootDir>/apps/"
     ]
-  }
+  },
+  "packageManager": "yarn@4.2.2"
 }
