--- a/apps/file-service/Dockerfile
+++ b/apps/file-service/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 EXPOSE 5000
 
-COPY package.json yarn.lock ./
+COPY package.json yarn.lock ./apps/file-service/
 
 RUN yarn install
 
