--- a/payment-service.yaml
+++ b/payment-service.yaml
@@ -14,13 +14,24 @@ spec:
     spec:
       containers:
         - name: payment-service-deploy  # <--- This is the name of the container
-          image: sergehall/lens-lounge-payment-service-deploy
+          image: sergehall/lens-lounge-payment-service
           resources:
             limits:
               memory: "256Mi" # <--- This is the maximum amount of memory that the container can use
               cpu: "250m"  # <--- This is the maximum amount of CPU that the container can use
           ports:
-            - containerPort: 5000 # <--- This is the port that the container is listening on
+            - containerPort: 5002 # <--- This is the port that the container is listening on
               protocol: TCP # <--- This is the protocol that the container is listening on
       restartPolicy: Always
-      
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: payment-service-deploy
+spec:
+  type: LoadBalancer
+  selector:
+    app: payment-service-deploy
+  ports:
+  - port: 80
+    targetPort: 5002
