--- a/file-service.yaml
+++ b/file-service.yaml
@@ -20,7 +20,7 @@ spec:
               memory: "256Mi" # <--- This is the maximum amount of memory that the container can use
               cpu: "250m"  # <--- This is the maximum amount of CPU that the container can use
           ports:
-            - containerPort: 5003 # <--- This is the port that the container is listening on
+            - containerPort: 83 # <--- This is the port that the container is listening on
               protocol: TCP # <--- This is the protocol that the container is listening on
       restartPolicy: Always # <--- This policy ensures that the container is always restarted if it crashes
 ---
@@ -33,6 +33,5 @@ spec:
   selector:
     app: file-service-deploy  # <--- This label selector matches the label on the pods to target them
   ports:
-    - protocol: TCP
-      port: 83  # <--- This is the port that the Service will be exposed on
-      targetPort: 5003  # <--- This is the port on the container that the traffic will be forwarded to
+    - port: 83  # <--- This is the port that the Service will be exposed on
+      targetPort: 83  # <--- This is the port on the container that the traffic will be forwarded to
