--- a/payment-service.yaml
+++ b/payment-service.yaml
@@ -20,7 +20,7 @@ spec:
               memory: "256Mi" # <--- This is the maximum amount of memory that the container can use
               cpu: "250m"  # <--- This is the maximum amount of CPU that the container can use
           ports:
-            - containerPort: 5002 # <--- This is the port that the container is listening on
+            - containerPort: 82 # <--- This is the port that the container is listening on
               protocol: TCP # <--- This is the protocol that the container is listening on
       restartPolicy: Always
 ---
@@ -33,6 +33,5 @@ spec:
   selector:
     app: payment-service-deploy
   ports:
-  - protocol: TCP
-    port: 82
-    targetPort: 5002
+  - port: 82
+    targetPort: 82
