--- a/apps/lens-lounge/package.json
+++ b/apps/lens-lounge/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "It_Incubator",
   "engines": {
+    "yarn": "4.4.0",
     "node": "20.11.1",
     "npm": "10.5.0"
   },
