--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "It_Incubator",
   "engines": {
+    "yarn": "4.4.0",
     "node": "20.11.1",
     "npm": "10.5.0"
   },
@@ -98,6 +99,5 @@
     "roots": [
       "<rootDir>/apps/"
     ]
-  },
-  "packageManager": "yarn@4.2.2"
+  }
 }
