--- a/apps/lens-lounge/package.json
+++ b/apps/lens-lounge/package.json
@@ -56,6 +56,7 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@aws-sdk/credential-provider-sso": "^3.635.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
@@ -65,6 +66,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@typescript-eslint/utils": "^8.2.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -76,7 +78,8 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   },
   "jest": {
     "moduleFileExtensions": [
