--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Serge Hall",
   "private": true,
   "license": "It_Incubator",
+  "packageManager": "yarn@4.4.0",
   "engines": {
     "yarn": "4.4.0",
     "node": "20.11.1",
@@ -55,7 +56,8 @@
     "pg": "^8.11.5",
     "prisma": "^5.13.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "0.3.21-dev.e7649d2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -77,8 +79,7 @@
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "tsconfig-paths": "^4.2.0"
   },
   "jest": {
     "moduleFileExtensions": [
